curl-app.yaml
apiVersion: v1
items:
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: curl
    name: curl
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: quay.io/dbais76/fedora-httpd-ocp:1.0
      from:
        kind: DockerImage
        name: quay.io/dbais76/fedora-httpd-ocp:1.0
      generation: null
      importPolicy: {}
      name: "1.0"
      referencePolicy:
        type: ""
  status:
    dockerImageRepository: ""
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: curl
    name: curl
  spec:
    replicas: 1
    selector:
      app: curl
      deploymentconfig: curl
    strategy:
      resources: {}
    template:
      metadata:
        annotations:
          sidecar.istio.io/inject: "true"
        creationTimestamp: null
        labels:
          app: curl
          deploymentconfig: curl
      spec:
        containers:
        - image: quay.io/dbais76/fedora-httpd-ocp:1.0
          name: curl
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          volumeMounts:
          - mountPath: /var/www/html
            name: curl-volume-1
        volumes:
        - emptyDir: {}
          name: curl-volume-1
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - curl
        from:
          kind: ImageStreamTag
          name: curl:1.0
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: curl
    name: curl
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: curl
      deploymentconfig: curl
  status:
    loadBalancer: {}
kind: List
metadata: {}
